--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,3 +38,21 @@ body {
   background-color: #647474;
   color: #d8d8c8;
 }
+
+.footer{
+  height: 20px;  
+  color: #d8d8c8;
+  font-size: xx-small;
+  /* background-color: #2e3d30;
+  background-image: linear-gradient(155deg,black 0%, #b7bbb3 20%,#2e3d30 40%); */
+  background-color: #2e3d30;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+#footerfont{
+  margin-top: 3px;
+}
