--- a/client/src/components/NavComponent/navcomponent.css
+++ b/client/src/components/NavComponent/navcomponent.css
@@ -8,5 +8,6 @@
 }
 
 #nav{
-    background-color: #2e3d30; 
+    background-color: #2e3d30;
+    background-image: linear-gradient(155deg,black 0%, #b7bbb3 20%,#2e3d30 40%);
 }
