--- a/client/src/components/ClassModal/classModal.css
+++ b/client/src/components/ClassModal/classModal.css
@@ -4,6 +4,11 @@
     max-width: 30vw;
 }
 
+.class-modal-withAttendees {
+    width: 60vw;    
+    max-width: 60vw;
+}
+
 .modal {
     margin-top: 10px;
 }
@@ -28,14 +33,26 @@
     display: none;
 }
 
-/* .classesModalFooter {
-    padding: 0;
-} */
-
 .classesModalBody {
-    padding: 10px 16px 10px;
+    padding: 10px 16px 12px;
 }
 
 .modalClassesButtons {
     float: right;
+}
+
+#mainContainer {
+    float: left;
+}
+
+@media screen and (max-width: 768px) {
+    .class-modal-regular {
+        width: 100vw;    
+        max-width: 100vw;
+    }
+
+    .class-modal-withAttendees {
+        width: 100vw;    
+        max-width: 100vw;
+    }
 }
