--- a/client/src/components/LocationCards/LocationCards.css
+++ b/client/src/components/LocationCards/LocationCards.css
@@ -14,10 +14,16 @@
 
 .cardEditBtn {
     width: 100px;
+    margin: 10px;
 }
 
 #editButtonDiv {
     text-align: center;
+}
+
+#locationInactive {
+    color: rgb(154, 20, 20) !important;
+    font-size: small;
 }
 
 @media screen and (max-width: 768px) {
