Couple sizing fixes, added some responsiveness to the buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,6 +41,13 @@ body {
 .greenbtn {
   background-color: #647474;
   color: #d8d8c8;
+  border-radius: 15px;
+  box-shadow: 0 5px #999;
+}
+
+.greenbtn:active {    
+  box-shadow: 0 1px #666;
+  transform: translateY(5px);
 }
 
 .footer{
