--- a/client/src/components/ClassModal/classModal.css
+++ b/client/src/components/ClassModal/classModal.css
@@ -1,7 +1,7 @@
 
 .class-modal-regular {
-    width: 37vw;    
-    max-width: 37vw;
+    width: 52vw;    
+    max-width: 52vw;
 }
 
 .modal {
@@ -40,5 +40,13 @@
     .class-modal-regular {
         width: 100vw;    
         max-width: 100vw;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1000px) {
+
+    .class-modal-regular {
+        width: 75vw;    
+        max-width: 75vw;
     }
 }
